fixed some spacing issues

--- a/ui/client-react/src/components/app/settings/settingsMenuItem.scss
+++ b/ui/client-react/src/components/app/settings/settingsMenuItem.scss
@@ -21,10 +21,10 @@
 
 .cardIcon {
   border-radius: 50%;
-  width: 68px;
+  width: 40px;
   float: left;
   font-size: 30px;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
 .cardHeader {
